Distinguish the server and client
[Problem] There is no client
[Solution] Separate the directory to implement client and server

Signed-off-by: Sungjae Park <nicesj@nicesj.com>

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,18 +1,10 @@
 cmake_minimum_required(VERSION 3.4.1)
 set(CMAKE_SKIP_BUILD_RPATH true)
-project(ncway CXX)
-
-include(FindPkgConfig)
-include(GNUInstallDirs)
-
-set_property(GLOBAL PROPERTY GLOBAL_DEPENDS_DEBUG_MODE 0)
-set(CMAKE_POISITION_INDEPENDENT_CODE TRUE)
-set(CMAKE_CXX_STANDARD 17)
+project(client CXX)
 
 pkg_check_modules(pkgs REQUIRED
 	egl
 	glesv2
-	wayland-client
 	wayland-server
 	wayland-egl
 )
