Update the debian packaging scripts
[Problem] Failed to build the deb packages
[Solution] Fixup build errors

Signed-off-by: Sung-jae Park <nicesj@nicesj.com>

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,15 @@ build
 .viminfo
 .gitconfig
 .ssh
+
+# Debian packaging files
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/files
+debian/ncway-samples.debhelper.log
+debian/ncway-samples.substvars
+debian/ncway-samples/
+debian/ncway.debhelper.log
+debian/ncway.substvars
+debian/ncway/
+debian/tmp/
