--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -20,7 +20,7 @@ endforeach(CFLAG)
 MESSAGE(${pkgs_LDFLAGS})
 aux_source_directory(src SRCS)
 include_directories(include)
-add_executable(${PROJECT_NAME} ${SRCS}) 
-target_link_libraries(${PROJECT_NAME} ${pkgs_LDFLAGS})
-install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+add_executable(ncway-${PROJECT_NAME} ${SRCS}) 
+target_link_libraries(ncway-${PROJECT_NAME} ${pkgs_LDFLAGS})
+install(TARGETS ncway-${PROJECT_NAME} DESTINATION bin)
 
